--- a/bakery-order-site-final/style-main.css
+++ b/bakery-order-site-final/style-main.css
@@ -221,7 +221,7 @@ text-align: center;
 }
 .col-3 h3{
   color: #27ae60;
-  font-size: 3.5rem;
+  font-size: 3rem;
 }
 .col-3 p{
   color: #666;
@@ -231,7 +231,7 @@ text-align: center;
 .col-7{width: 61.33%;}
 
 .swiper-slide img{
-  max-width: 800px;
+  max-width: 871px;
   width: 100%;
   height: 450px;
   border: 1px solid #27ae60;
@@ -738,12 +738,16 @@ width: 100%;
 
 /*   foooteeer sectioon   */
 
+.footer{
+  background: rgb(219, 211, 211);
+}
 
 .footer .box-container{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap:1.5rem;
-  margin: 0 2rem;
+  margin-left:  2rem;
+  margin-top: 3rem;
 }
 
 .footer .box-container .box h3{
@@ -756,7 +760,13 @@ width: 100%;
   display: block;
   padding:.5rem 0;
   font-size: 1.5rem;
-  color:#666;
+  text-decoration: none;
+  color:black;
+}
+.footer .box-container .box a span.loc{
+  font-family:'Nunito', sans-serif;
+  line-height: 2rem;
+  padding-left: 1rem;
 }
 
 .footer .box-container .box a:hover{
