--- a/bakery-order-site-final/login-register/login-style-2.css
+++ b/bakery-order-site-final/login-register/login-style-2.css
@@ -4,7 +4,7 @@ html, body{
 .login-page{
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(no-recipe-required-pound-cake-30082016.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(login.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
