--- a/bakery-order-site-final/login-style-2.css
+++ b/bakery-order-site-final/login-style-2.css
@@ -4,7 +4,7 @@ html, body{
 .login-page{
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(login.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(images/login.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
@@ -74,15 +74,38 @@ html, body{
     outline: none;
     border-radius: 30px;
 }
+
+a{
+    text-decoration: none;
+}
+.home{
+    width: 82%;
+    padding: 10px 30px;
+
+    cursor: pointer;
+    display: block;
+    margin: 3rem 1.7rem;
+    background:#27ae60 ;
+    border: 0;
+    outline: none;
+    border-radius: 30px;  
+}
 .check-box{
     margin: 30px 10px 30px 0;
 }
 span{
     color: #777;
     font-size: 12px;
-    bottom: 68px;
+    bottom: 64px;
     position: absolute;
 }
+span.register-form{
+    color: #777;
+    font-size: 12px;
+    bottom: 64px;
+    position: absolute;
+}
+
 #login{
     left: 50px;
 
